@@ -37,7 +37,7 @@
 </fieldset>
 <fieldset>
 <div class="submit">
-	<input name="username" value="{$username}" type="hidden">
+	<input name="userid" value="{$userid}" type="hidden">
 	<input name="tpw" value="{$tpw}" type="hidden">
 	<input name="submit" value="1" type="hidden">
 	<input name="key" value="{$form_key}" type="hidden">
