@@ -44,7 +44,7 @@
 </div>
 </form>
 {/if}
-{if !$maintenance and $show_login and $cookieconsent and $oscript != 'logout.php' and $oscript != 'login.php'}
+{if !$maintenance and $show_login and $cookieconsent and $oscript != 'logout.php' and $oscript != 'login.php' and $oscript != 'register.php' and $oscript != 'email_confirmation.php'}
 <a id="ps-login-link" href="login.php" title="<#Quick Login Popup#>"><img id="ps-login-img" src="{theme->url}/img/menu-login-icon.gif" alt="<#Login#>"></a>
 {/if}
 {if !$maintenance}
